# -wind-turbine-reliability-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py
notebooks/: 01_data_loading.ipynb  02_eda.ipynb  03_rca_reliability.ipynb
scripts/: download_data.py
src/: features.py  load.py  rca.py  viz.py
